--- a/app.yaml
+++ b/app.yaml
@@ -8,9 +8,12 @@ env_variables:
   APP_STORAGE: /tmp
   ## Set these environment variables according to your CloudSQL configuration.
   DB_DATABASE: running-laravel-on-gcp
-  DB_USERNAME: laravel
-  DB_PASSWORD: C0mpl3xP4ssw0rd
-  DB_SOCKET: "/cloudsql/running-laravel-on-gcp:asia-southeast1:running-laravel-on-gcp"
+  DB_USERNAME: root
+  DB_PASSWORD: secret
+#  DB_SOCKET: "/cloudsql/running-laravel-on-gcp:asia-southeast1:running-laravel-on-gcp"
   FILESYSTEM_DRIVER: gcs
+  FILESYSTEM_CLOUD: gcs
   GOOGLE_CLOUD_PROJECT_ID: running-laravel-on-gcp
   GOOGLE_CLOUD_STORAGE_BUCKET: running-laravel-on-gcp.appspot.com
+  GOOGLE_CLOUD_STORAGE_API_URI: https://storage.cloud.google.com/running-laravel-on-gcp
+
