--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-medialibrary": "^7.0.0",
         "superbalist/laravel-google-cloud-storage": "^2.0"
     },
     "require-dev": {
