--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,12 @@
 runtime: php72
 
+handlers:
+  # Serve a directory as a static resource.
+  - url: /css
+    static_dir: public/css
+  - url: /js
+      static_dir: public/js
+
 # Put production environment variables here.
 env_variables:
   # Applicaton key
