Update API base URL and font directory

--- a/app.yaml
+++ b/app.yaml
@@ -10,8 +10,8 @@ handlers:
 
   - url: /(.*\.woff)
     mime_type: application/x-font-woff
-    static_files: public/fonts/\1
-    upload: public/fonts/(.*\.woff)
+    static_files: public/fonts/vendor/font-awesome
+    upload: public/fonts/vendor/font-awesome/(.*\.woff)
 
   - url: .*
     script: auto
