--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "spatie/laravel-medialibrary": "^7.0.0",
-        "superbalist/laravel-google-cloud-storage": "^2.0"
+        "superbalist/laravel-google-cloud-storage": "2.1.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
